--- a/TODO
+++ b/TODO
@@ -13,5 +13,6 @@
 - Use stb_image for image decompression (re-map malloc, realloc, etc.), stb_vorbis...
     - Or use own custom...
 - Get the actual VESA framebuffer location by looping through the modes
+- Add a git for my config files (this is getting dumb)
 
 
